contents/v40/documentation/localization/pipes.md
<!-- ======================================================================
--- Search engine
title:          Localization pipes
keywords:       localization, pipes
description:    Localization pipes of ng-translation.
--- Menu system
order:          70
text:           Pipes
hidden:         false
umbel:          false
--- Page properties
id:             
document:       
layout:         layout-2-left
$-left:         #side-menu
searchable:     true
--- Side menu
side-menu-root:     /documentation
side-menu-header:   Documentation
side-menu-top:      
side-menu-depth:    2
======================================================================= -->

# Localization pipes

The formatting rules can be applied by the following pipes in views:

{{ localization/pipes/basic! }}

The `toNumber`, `toPercent`, `toCcurrency` and `toDatetime` pipes can bes used
with parameters as well:

{{ localization/pipes/param! }}
